examples/test/testpolicy9803.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9803
  namespace: namespace241
spec:
  podSelector:
    matchLabels:
      key31: value29
      key36: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value2
          key27: value42
      podSelector:
        matchLabels:
          key35: value18
